[tool.poetry]
name = "ark"
version = "0.3.5"
description = "A command-line tool for managing Ansible Runner Projects."
authors = ["Anthony Pagan <get-tony@outlook.com>"]
readme = "README.md"
homepage = "https://github.com/Get-Tony/Ark"
license = "MIT"
repository = "https://github.com/Get-Tony/Ark"
keywords = ["ansible", "devops", "cli"]
include = ["ark/py.typed"]

[tool.poetry.dependencies]
python = "^3.9.0"
ansible-lint = { version = "^6.14.3", markers = "platform_system != 'Windows'" }
ansible-runner = "^2.3.2"
sqlmodel = "^0.0.4"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
tabulate = "^0.9.0"
types-tabulate = "^0.9.0.2"
python-crontab = "^2.7.1"
ansible = "^7.4.0"
sphinx = "^6.2.0"
sphinx-rtd-theme = "^1.2.0"
sphinxcontrib-napoleon = "^0.7"

[tool.poetry.extras]
docs =["sphinx", "sphinx-rtd-theme", "sphinxcontrib-napoleon"]

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.12.1"
mypy = "^0.910"
pylint = "^2.17.1"
ipykernel = "^6.22.0"
ruff = "^0.0.261"

[tool.black]
line-length = 79

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
pretty = true
verbosity = 0
disallow_incomplete_defs = true
disallow_untyped_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
ignore_missing_imports = true

[tool.pylint.messages_control]
ignored-modules = ["pydantic"]

[tool.pylint.format]
max-line-length = 79

[tool.pylint.'reports=no']
output-format = "text"

[tool.poetry.scripts]
ark = "ark.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
